--- a/hotline.html
+++ b/hotline.html
@@ -14,17 +14,17 @@
     <div class="page">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="http://localhost/covid/">Covid-19 Tracker</a>
+                <a class="navbar-brand" href="/">Covid-19 Tracker</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active" style="border-right: 1px solid #ebecec;">
-                            <a class="nav-link" href="http://localhost/covid/"><i class="fas fa-home"></i> Dashboard <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/"><i class="fas fa-home"></i> Dashboard <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="http://localhost/covid/hotline.html"><i class="fas fa-phone"></i> Hotline Corona</a>
+                            <a class="nav-link" href="hotline.html"><i class="fas fa-phone"></i> Hotline Corona</a>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +40,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/hi2kxQSwLS.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/hi2kxQSwLS.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">0215210411</h5></a>
                                     <p class="text-muted mb-0">Kementrian Kesehatan</p>
@@ -54,7 +54,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/SCj5W3Bcyw.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/SCj5W3Bcyw.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">081212123119</h5></a>
                                     <p class="text-muted mb-0">Kementrian Kesehatan</p>
@@ -68,7 +68,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/QUBBeq7kuY.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/QUBBeq7kuY.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">112</h5></a>
                                     <p class="text-muted mb-0">Pemprov DKI Jakarta</p>
@@ -82,7 +82,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/X3iY6kR3DC.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/X3iY6kR3DC.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">081388376955</h5></a>
                                     <p class="text-muted mb-0">Pemprov DKI Jakarta</p>
@@ -96,7 +96,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/4u8Jd4br3L.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/4u8Jd4br3L.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">0243580713</h5></a>
                                     <p class="text-muted mb-0">Pemprov Jawa Tengah</p>
@@ -110,7 +110,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/9I7RoPneF4.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/9I7RoPneF4.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">082313600560</h5></a>
                                     <p class="text-muted mb-0">Pemprov Jawa Tengah</p>
@@ -124,7 +124,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/UuUicveI88.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/UuUicveI88.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">0318430313</h5></a>
                                     <p class="text-muted mb-0">Pemprov Jawa Timur</p>
@@ -138,7 +138,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/KFycZHfULj.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/KFycZHfULj.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">081334367800</h5></a>
                                     <p class="text-muted mb-0">Pemprov Jawa Timur</p>
@@ -152,7 +152,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/CJz11kHb94.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/CJz11kHb94.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">119</h5></a>
                                     <p class="text-muted mb-0">Pemprov Jawa Barat</p>
@@ -166,7 +166,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/gEXEM7IxH3.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/gEXEM7IxH3.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">0811-209-3306</h5></a>
                                     <p class="text-muted mb-0">Pemprov Jawa Barat</p>
@@ -180,7 +180,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/nj6sKmBCEi.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/nj6sKmBCEi.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">0274555585</h5></a>
                                     <p class="text-muted mb-0">Pemprov D.I Yogyakarta</p>
@@ -194,7 +194,7 @@
                         <div class="card-body">
                             <div class="item-box text-center">
                                 <div class=" text-center  mb-4 text-primary">
-                                    <img src="http://localhost/covid/assets/images/hotlines/80uLI0N6gh.png" width="50" height="50" alt="Logo Daerah">                                </div>
+                                    <img src="assets/images/hotlines/80uLI0N6gh.png" width="50" height="50" alt="Logo Daerah">                                </div>
                                 <div class="item-box-wrap">
                                     <a href="tel:0215210411"><h5 class="mb-2">0811-2764-800</h5></a>
                                     <p class="text-muted mb-0">Pemprov D.I Yogyakarta</p>
