--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div class="page">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="http://localhost/covid">Covid-19 Tracker</a>
+                <a class="navbar-brand" href="/">Covid-19 Tracker</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active" style="border-right: 1px solid #ebecec;">
-                            <a class="nav-link" href="http://localhost/covid/ ?>"><i class="fas fa-home"></i> Dashboard <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/"><i class="fas fa-home"></i> Dashboard <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active" style="border-right: 1px solid #ebecec;">
-                            <a class="nav-link" href="http://localhost/covid/hotline.html"><i class="fas fa-phone"></i> Hotline Corona</a>
+                            <a class="nav-link" href="hotline.html"><i class="fas fa-phone"></i> Hotline Corona</a>
                         </li>
                     </ul>
                 </div>
