--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li class="nav-item active" style="border-right: 1px solid #ebecec;">
                             <a class="nav-link" href="/"><i class="fas fa-home"></i> Dashboard <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item active" style="border-right: 1px solid #ebecec;">
+                        <li class="nav-item active">
                             <a class="nav-link" href="hotline.html"><i class="fas fa-phone"></i> Hotline Corona</a>
                         </li>
                     </ul>
